Closed Bug 1212015 Opened 10 years ago Closed 10 years ago

Fix a couple of OOM handling issues in AsmJS

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox44 --- fixed

People

(Reporter: jonco, Assigned: jonco)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch fix-asm-failure (obsolete) — Splinter Review
No description provided.
Attachment #8670399 - Flags: review?(terrence)
Comment on attachment 8670399 [details] [diff] [review] fix-asm-failure Review of attachment 8670399 [details] [diff] [review]: ----------------------------------------------------------------- Sorry for the drive-by review, I was curious about what was going wrong here... ::: js/src/asmjs/AsmJSValidate.cpp @@ +6401,5 @@ > } > > AsmFunction* asmFunc = lifo.new_<AsmFunction>(lifo); > + if (!asmFunc) > + return false; nice catch! @@ +6485,5 @@ > AsmModuleCompilerScope scope; > if (!CreateAsmModuleCompiler(m.compileInputs(), &scope)) > return false; > ModuleCompiler& mc = scope.module(); > + if (!mc.init()) CreateAsmModuleCompiler calls init() already. @@ +6662,5 @@ > if (!CreateAsmModuleCompiler(m.compileInputs(), &scope)) > return false; > ModuleCompiler& mc = scope.module(); > + if (!mc.init()) > + return false; ditto
(In reply to Benjamin Bouvier [:bbouvier] from comment #1) > CreateAsmModuleCompiler calls init() already. Oh, you fixed this yourself if bug 1181612, nice.
Even smaller patch this time.
Attachment #8670399 - Attachment is obsolete: true
Attachment #8670399 - Flags: review?(terrence)
Attachment #8670410 - Flags: review?(terrence)
Comment on attachment 8670410 [details] [diff] [review] bug1212015-asmjs v2 Review of attachment 8670410 [details] [diff] [review]: ----------------------------------------------------------------- r="whatever Benjamin said"
Attachment #8670410 - Flags: review?(terrence) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: