Bug 1212015 - Fix an unchecked allocation in AsmJS r=terrence