js/src/asmjs/AsmJSValidate.cpp
@@ -6400,6 +6400,9 @@ CheckFunction(ModuleValidator& m, LifoAlloc& lifo, AsmFunction** funcOut)
     }
 
     AsmFunction* asmFunc = lifo.new_<AsmFunction>(lifo);
+    if (!asmFunc)
+        return false;
+
     FunctionValidator f(m, *asmFunc, fn);
     if (!f.init())
         return false;
